[package]
name = "playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustql_common = {path = "../rustql_common"}
rustql_parser = { path = "../rustql_parser"}
serde = "1.0.183"
serde_derive = "1.0.183"
serde_json = "1.0.104"
