[package]
name = "playground"
authors = ["Solo-steven"]
description = "cli tool for rustql"
version = "0.1.0"
edition = "2021"
license-file = "../../LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustql_common = { version = "0.1.0", path = "../rustql_common"}
rustql_parser = { version = "0.1.0", path = "../rustql_parser"}
rustql_typegen = { version = "0.1.0", path = "../rustql_typegen"}
serde = "1.0.183"
serde_derive = "1.0.183"
serde_json = "1.0.104"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
