[package]
name = "rustgql_common"
description = "ast and common type for rustql packages"
authors = ["Solo-steven"]
version = "0.1.0"
edition = "2021"
license-file = "../../LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.183"
serde_derive = "1.0.183"
serde_json = "1.0.104"
