[package]
name = "rustgql_core"
authors = ["Solo-steven"]
description = "core api for rustgql"
version = "0.1.1"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rustgql_common = { version = "0.1.0", path = "../rustgql_common"}
rustgql_parser = { version = "0.1.0", path = "../rustgql_parser"}
rustgql_typegen = { version = "0.1.0", path = "../rustgql_typegen"}
rustgql_minifier = { version = "0.1.0", path= "../rustgql_minifier" }
wasm-bindgen = "0.2.87"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
serde = "1.0.183"
serde_derive = "1.0.183"
serde_json = "1.0.104"
