[package]
name = "rustgql_minifier"
authors = ["Solo-steven"]
description = "generate graphql from graphql schma"
version = "0.1.0"
edition = "2021"
license-file = "../../LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustgql_common = { version = "0.1.0", path = "../rustgql_common"}

[dev-dependencies]
rustgql_parser = { version = "0.1.0", path = "../rustgql_parser"}
criterion = { version = "0.4", features = ["html_reports"] }
serde = "1.0.183"
serde_derive = "1.0.183"
serde_json = "1.0.104"
