[package]
name = "rustgql_parser"
authors = ["Solo-steven"]
description = "rustql parser for graphql"
version = "0.1.0"
edition = "2021"
license-file = "../../LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustgql_common = { version = "0.1.0", path = "../rustgql_common"}

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
serde_json = "1.0.104"
graphql-parser = "0.4.0"

[[bench]]
name = "parser_benches"
harness = false